[tool.poetry]
name = "tron-service"
version = "0.1.0"
description = ""
authors = ["Pavel Drovnin <pavel98rus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
asyncpg = "^0.30.0"
tronpy = "^0.5.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pydantic = "^2.11.3"
sqlalchemy = "^2.0.40"
pydantic-settings = "^2.8.1"
sqlalchemy-utils = "^0.41.2"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
